--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve", 
-    "build": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build",
-    "serve": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng serve",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -21,9 +20,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "@fortawesome/fontawesome-free": "^6.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
