--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@okta/okta-angular": "6.0",
+    "@okta/okta-auth-js": "7.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.12.0"
   },
